fix: roundabout on subsequence (#1133)